Updated build.gradle and java to java 25